@@ -26,6 +26,7 @@ fdm ============================================================================
 7.4	SMTP
 7.5	Write, pipe and append
 7.6 	Rewriting mail
+7.7	Removing headers
 8	Filtering mail
 8.1	Nesting rules
 8.2	The all condition
@@ -700,6 +701,15 @@ of this). Possible rewrite action definitions are:
 
 	action "mysedaction" rewrite "sed 's/x/y/'"
 
+Removing headers ---------------------------------------------------------------
+
+A simple action is provided to remove all instances of a header from mail,
+for example:
+
+	action "del-ua" remove-header "user-agent"
+
+	action "rmhdr" remove-header "x-stupid-header"
+
 Filtering mail =================================================================
 
 Mail is filtered by defining a set of filtering rules. These rules tie together
@@ -1170,5 +1180,5 @@ match "^List-Id:.*<full-disclosure\\.lists\\.grok\\.org\\.uk>" in headers
 	actions { "strip-full-disclosure" "full-disclosure" }
 
 ================================================================================
-$Id: MANUAL,v 1.46 2007-02-09 16:48:07 nicm Exp $
+$Id: MANUAL,v 1.47 2007-02-21 09:35:58 nicm Exp $
 
