@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.95 2007-02-09 15:40:20 nicm Exp $
+# $Id: Makefile,v 1.96 2007-02-21 09:35:58 nicm Exp $
 
 .SUFFIXES: .c .o .y .l .h
 .PHONY: clean update-index.html upload-index.html lint regress yannotate
@@ -17,7 +17,7 @@ SRCS= fdm.c log.c xmalloc.c xmalloc-debug.c io.c replace.c connect.c mail.c \
       deliver-append.c deliver-rewrite.c match-regexp.c match-command.c \
       match-tagged.c match-size.c match-string.c match-matched.c match-age.c \
       match-unmatched.c match-attachment.c child.c parent.c privsep.c attach.c \
-      cleanup.c imap-common.c fetch-imappipe.c \
+      cleanup.c imap-common.c fetch-imappipe.c deliver-remove-header.c \
       parse.y lex.l
 
 LEX= lex
