@@ -1,4 +1,4 @@
-/* $Id: deliver-rewrite.c,v 1.34 2007-02-09 15:40:20 nicm Exp $ */
+/* $Id: deliver-rewrite.c,v 1.35 2007-02-21 09:35:58 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -47,7 +47,7 @@ rewrite_deliver(struct deliver_ctx *dctx, struct action *t)
 	char		*lbuf;
 	size_t		 llen;
 
-	s = replace(t->data, &m->tags, m, dctx->pm_valid, dctx->pm);
+	s = replace(t->data, &m->tags, m, *dctx->pm_valid, dctx->pm);
         if (s == NULL || *s == '\0') {
 		log_warnx("%s: empty command", a->name);
 		if (s != NULL)
