@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.53 2007-02-09 16:48:08 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.54 2007-02-21 09:35:58 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -502,6 +502,9 @@ match all action "rewrite" continue
 # this rule will cat the rewritten message
 match all action "cat"
 .Ed
+.Ic remove-header Ar name
+Remove all occurances of header
+.Ar name .
 .El
 .Sh RULES
 Rules are specified using the
