@@ -1,3 +1,8 @@
+19 February 2007
+
+* Add a remove-header action to remove all instances of a header. Based on a
+  a request by Tobias Ulmer.
+
 09 February 2007
 
 * Reworked the substitution stuff. Each mail now carries a list of tag name,
@@ -44,4 +49,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.13 2007-02-09 16:48:07 nicm Exp $
+$Id: CHANGES,v 1.14 2007-02-21 09:35:58 nicm Exp $
